test_outputs/connlist/cudn_test_4_connlist_output.txt
Permitted connectivity analyzed in Pod network:
all input workloads are configured with (C)UDN as their primary network interface

Permitted connectivity analyzed in primary UDN udn-example:
0.0.0.0-255.255.255.255[External] => udn-example[udn]/example-vm[VirtualMachine] : All Connections
udn-example[udn]/example-vm[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections

Permitted connectivity analyzed in primary CUDN cluster-udn-prod:
0.0.0.0-255.255.255.255[External] => udn-preprod/vm-preprod[VirtualMachine] : All Connections
0.0.0.0-255.255.255.255[External] => udn-prod/vm-prod[VirtualMachine] : All Connections
udn-preprod/vm-preprod[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
udn-preprod/vm-preprod[VirtualMachine] => udn-prod/vm-prod[VirtualMachine] : All Connections
udn-prod/vm-prod[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
udn-prod/vm-prod[VirtualMachine] => udn-preprod/vm-preprod[VirtualMachine] : All Connections

Workload-to-Networks Mapping:
udn-example/example-vm[VirtualMachine]: 
	Primary Network: udn-example[UDN]
udn-preprod/vm-preprod[VirtualMachine]: 
	Primary Network: cluster-udn-prod[CUDN]
udn-prod/vm-prod[VirtualMachine]: 
	Primary Network: cluster-udn-prod[CUDN]
